Sections layed out.

--- a/index.html
+++ b/index.html
@@ -2,17 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Entities: From Core to Custom</title>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+    <link href="css/normalize.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div id="impress">
+        <div id="overview" class="step" data-x="-1000" data-y="-1000" data-scale="4"></div>
         <div id="title" class="step slide" data-x="-1000" data-y="-1000" data-scale="3">
-            <div class="slide-text">
+            <div class="slide-text centered">
                 <h1>Entities</h1>
                 <h2>From Core to Custom</h2>
+                <p>Shawn Duncan, Technical Architect</p>
+                <p>Digital Pulp</p>
             </div>
             <div id="license">
-                <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+                <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><span class="footer-text">This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</span>
+            </div>
+        </div>
+        <div id="data-container" class="step slide" data-x="-1000" data-y="-2500" data-scale="1">
+            <div class="slide-text centered">
+                <h2>The Idea of a Data Container</h2>
+            </div>
+        </div>
+        <div id="core-intities" class="step slide" data-x="1150" data-y="-1000" data-scale="1">
+            <div class="slide-text centered">
+                <h2>Working with Core Entities</h2>
+            </div>
+        </div>
+        <div id="smarter" class="step slide" data-x="-1000" data-y="500" data-scale="1">
+            <div class="slide-text centered">
+                <h2>Smarter Modules with Custom Entities</h2>
+            </div>
+        </div>
+        <div id="resources" class="step slide" data-x="-3150" data-y="-1000" data-scale="1">
+            <div class="slide-text centered">
+                <h2>More Resources</h2>
             </div>
         </div>
     </div>
