First section finished.

--- a/index.html
+++ b/index.html
@@ -21,24 +21,73 @@
                 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><span class="footer-text">This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</span>
             </div>
         </div>
-        <div id="data-container" class="step slide" data-x="-1000" data-y="-2500" data-scale="1">
+        <div id="data-container" class="step slide" data-x="-1000" data-y="-3150" data-scale="1">
             <div class="slide-text centered">
-                <h2>The Idea of a Data Container</h2>
+                <h1>The Idea of a Data Container</h1>
             </div>
         </div>
-        <div id="core-intities" class="step slide" data-x="1150" data-y="-1000" data-scale="1">
-            <div class="slide-text centered">
-                <h2>Working with Core Entities</h2>
+        <div class="step slide" data-x="-1500" data-y="-3150" data-z="-500" data-rotate-y="-90">
+            <h2>The Idea of a Data Container</h2>
+            <div class="data-container"><img src="images/container_ship_cropped.jpg"></div>
+            <div class="slide-text">
+                <ul>
+                    <li>An object that stores information.</li>
+                    <ul>
+                        <li>Content</li>
+                        <li>Configuration</li>
+                    </ul>
+                </ul>
             </div>
         </div>
-        <div id="smarter" class="step slide" data-x="-1000" data-y="500" data-scale="1">
+        <div class="step slide" data-x="-1000" data-y="-3650" data-z="-500" data-rotate-x="90">
+            <h2>The Idea of a Data Container</h2>
+            <div class="slide-text">
+                <ul>
+                    <li>No actual Entity Class in D7 core.</li>
+                    <li>PHP Standard Objects</li>
+                    <ul>
+                        <li>Node</li>
+                        <li>User</li>
+                        <li>Taxonomy</li>
+                        <li>Comments</li>
+                    </ul>
+                </ul>
+            </div>
+        </div>
+        <div class="step slide" data-x="-500" data-y="-3150" data-z="-500" data-rotate-y="90">
+            <h2>The Idea of a Data Container</h2>
+            <div class="slide-text">
+                <ul>
+                    <li>In Drupal 8, Entities are first class objects</li>
+                    <li>Content
+                        <dl>
+                            <dt><code>\Drupal\Core\Entity\ContentEntityBase</code></dt>
+                            <dd>abstract class ContentEntityBase extends Entity implements \IteratorAggregate, ContentEntityInterface</dd>
+                        </dl>
+                    </li>
+                    <li>Configuration
+                        <dl>
+                            <dt><code>\Drupal\Core\Config\Entity\ConfigEntityBase</code></dt>
+                            <dd>abstract class ConfigEntityBase extends Entity implements ConfigEntityInterface</dd>
+                        </dl>
+                    </li>
+                    <li><a target="_blank" href="images/Entity.svg">UML</a></li>
+                </ul>
+            </div>
+        </div>
+        <div id="core-entities" class="step slide" data-x="1150" data-y="-1000" data-scale="1">
             <div class="slide-text centered">
-                <h2>Smarter Modules with Custom Entities</h2>
+                <h1>Working with Core Entities</h1>
+            </div>
+        </div>
+        <div id="smarter" class="step slide" data-x="-1000" data-y="1150" data-scale="1">
+            <div class="slide-text centered">
+                <h1>Smarter Modules with Custom Entities</h1>
             </div>
         </div>
         <div id="resources" class="step slide" data-x="-3150" data-y="-1000" data-scale="1">
             <div class="slide-text centered">
-                <h2>More Resources</h2>
+                <h1>More Resources</h1>
             </div>
         </div>
     </div>
