Re-sized slides for a smaller viewport.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 <body>
     <div id="impress">
@@ -26,7 +27,7 @@
                 <h1>The Idea of a Data Container</h1>
             </div>
         </div>
-        <div class="step slide" data-x="-1500" data-y="-3150" data-z="-500" data-rotate-y="-90">
+        <div class="step slide" data-x="-1350" data-y="-3150" data-z="-350" data-rotate-y="-90">
             <h2>The Idea of a Data Container</h2>
             <div class="data-container"><img src="images/container_ship_cropped.jpg"></div>
             <div class="slide-text">
@@ -39,7 +40,7 @@
                 </ul>
             </div>
         </div>
-        <div class="step slide" data-x="-1000" data-y="-3650" data-z="-500" data-rotate-x="90">
+        <div class="step slide" data-x="-1000" data-y="-3500" data-z="-350" data-rotate-x="90">
             <h2>The Idea of a Data Container</h2>
             <div class="slide-text">
                 <ul>
@@ -54,21 +55,21 @@
                 </ul>
             </div>
         </div>
-        <div class="step slide" data-x="-500" data-y="-3150" data-z="-500" data-rotate-y="90">
+        <div class="step slide" data-x="-650" data-y="-3150" data-z="-350" data-rotate-y="90">
             <h2>The Idea of a Data Container</h2>
             <div class="slide-text">
                 <ul>
                     <li>In Drupal 8, Entities are first class objects</li>
                     <li>Content
                         <dl>
-                            <dt><code>\Drupal\Core\Entity\ContentEntityBase</code></dt>
-                            <dd>abstract class ContentEntityBase extends Entity implements \IteratorAggregate, ContentEntityInterface</dd>
+                            <dt><em>\Drupal\Core\Entity\ContentEntityBase</em></dt>
+                            <dd><code>abstract class ContentEntityBase extends Entity implements \IteratorAggregate, ContentEntityInterface</code></dd>
                         </dl>
                     </li>
                     <li>Configuration
                         <dl>
-                            <dt><code>\Drupal\Core\Config\Entity\ConfigEntityBase</code></dt>
-                            <dd>abstract class ConfigEntityBase extends Entity implements ConfigEntityInterface</dd>
+                            <dt><em>\Drupal\Core\Config\Entity\ConfigEntityBase</em></dt>
+                            <dd><code>abstract class ConfigEntityBase extends Entity implements ConfigEntityInterface</code></dd>
                         </dl>
                     </li>
                     <li><a target="_blank" href="images/Entity.svg">UML</a></li>
