--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
                 <h1>Working with Core Entities</h1>
             </div>
         </div>
+        <div id="fieldable" class="step slide" data-x="800" data-y="-1000" data-z="-350" data-rotate-y="-90">
+            <h2>Working with Core Entities</h2>
+            <div class="data-diagram"><img src="images/related_data.png"></div>
+            <div class="slide-text">
+                <ul>
+                    <li>If you've been working with Drupal for multiple versions, now is the time to stop thinking in nodes.</li>
+                    <li>Use fields to model your real processes and relationships.</li>
+                </ul>
+            </div>
+        </div>
         <div id="smarter" class="step slide" data-x="-1000" data-y="1150" data-scale="1">
             <div class="slide-text centered">
                 <h1>Smarter Modules with Custom Entities</h1>
