--- a/index.html
+++ b/index.html
@@ -101,14 +101,73 @@
             </ul>
         </div>
     </div>
+    <div class="step slide" data-x="1150" data-y="-1350" data-z="-350" data-rotate-x="90">
+        <h2>Working with Core Entities</h2>
+        <div class="slide-text">
+            <ul>
+                <li>QueryFactory: entity.query</li>
+                <li>You may see blog post refering to the EntityManager Service
+                    <ul>
+                        <li>Deprecated</li>
+                        <li>See: <a href="https://www.drupal.org/node/2549139" target="_blank">https://www.drupal.org/node/2549139</a>
+                        </li>
+                        <li>Use EntityTypeManger: entity_type.manager</li>
+                    </ul>
+                </li>
+                <li>Accessing fields with methods.</li>
+                <li>Setting field values. Check <code>::generateSampleValue</code> on the field class to get structure.
+                </li>
+            </ul>
+        </div>
+    </div>
     <div id="smarter" class="step slide" data-x="-1000" data-y="1150" data-scale="1">
         <div class="slide-text centered">
             <h1>Smarter Modules with Custom Entities</h1>
         </div>
     </div>
+    <div class="step slide" data-x="-1350" data-y="1150">
+        <h2>Classes, Files and Annotations for Custom Content Entities</h2>
+        <div class="slide-text">
+            <ul>
+                <li>An entity class at <code>/src/Entity/</code>
+                    <ul>
+                        <li>extend <code>ContentEntityBase</code></li>
+                        <li>implement <code>DefaultEntityInterface</code></li>
+                        <li><code>@ContentEntityType</code> Annotations
+                            <ul>
+                                <li>Refer to <code>\Drupal\Core\Entity\ContentEntityType</code> for properties</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+
+            </ul>
+        </div>
+    </div>
     <div id="resources" class="step slide" data-x="-3150" data-y="-1000" data-scale="1">
         <div class="slide-text centered">
             <h1>More Resources</h1>
+        </div>
+    </div>
+    <div class="step slide" data-x="-3500" data-y="-1000" data-z="-350" data-rotate-y="-90">
+        <h2>More Resources</h2>
+        <div class="slide-text">
+            <dl>
+                <dt>The Example Project</dt>
+                <dd><a>https://www.drupal.org/project/examples</a></dd>
+                <dt>Content Entity Cheatsheet</dt>
+                <dd><a>http://wizzlern.nl/drupal/drupal-8-entity-cheat-sheet</a></dd>
+                <dt>Drupal Console</dt>
+                <dd><a>https://drupalconsole.com</a></dd>
+            </dl>
+        </div>
+    </div>
+    <div id="questions" class="step slide" data-x="-3150" data-y="-650" data-z="-350" data-rotate-x="-90">
+        <h2>Open Q & A</h2>
+        <div class="slide-text">
+            <h3>&OpenCurlyDoubleQuote;Bring him here.&CloseCurlyDoubleQuote;</h3>
+            <img src="images/Yoda_Attack_of_the_Clones.png">
+            <h3>&OpenCurlyDoubleQuote;Question him we will.&CloseCurlyDoubleQuote;</h3>
         </div>
     </div>
 </div>
