Added config entity command

--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
                 <li>Drupal Console</li>
                 <li><code>drupal generate:module</code></li>
                 <li><code>drupal generate:entity:content</code></li>
+                <li><code>drupal generate:entity:config</code></li>
             </ul>
         </div>
     </div>
