--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
         <div class="slide-text">
             <dl>
                 <dt>The Example Project</dt>
-                <dd><a>https://www.drupal.org/project/examples</a></dd>
+                <dd><a href="https://www.drupal.org/project/examples" target="_blank">https://www.drupal.org/project/examples</a></dd>
                 <dt>Content Entity Cheatsheet</dt>
-                <dd><a>http://wizzlern.nl/drupal/drupal-8-entity-cheat-sheet</a></dd>
+                <dd><a href="http://wizzlern.nl/drupal/drupal-8-entity-cheat-sheet" target="_blank">http://wizzlern.nl/drupal/drupal-8-entity-cheat-sheet</a></dd>
                 <dt>Drupal Console</dt>
-                <dd><a>https://drupalconsole.com</a></dd>
+                <dd><a href="https://drupalconsole.com" target="_blank">https://drupalconsole.com</a></dd>
             </dl>
         </div>
     </div>
